fix bug - Todo list > add new task form flickering on fast typing

--- a/src/components/utilServices/todo/ToDoTextAreaInput.css
+++ b/src/components/utilServices/todo/ToDoTextAreaInput.css
@@ -8,6 +8,10 @@
   resize: none;
 }
 
+.to-do-text-area-input::-webkit-scrollbar {
+  width: 0px;
+}
+
 .to-do-text-area-input:focus {
   outline: none;
 }
